2003-08-22  David Hyatt  <hyatt@apple.com>

	Fix for 3388363, copying a word in a list item copied too much.  The code that checked
	for the bullet would add in too much text sometimes.
	
        Reviewed by john

        * kwq/KWQKHTMLPart.mm:
        (isTextFirstInListItem):
        (KWQKHTMLPart::attributedString):

2003-08-21  Darin Adler  <darin@apple.com>

        * Makefile.am: Work around DLCFN issue to prevent constant churn of config.h.
        * config.h: Regenerated without DLCFN.

2003-08-21  Darin Adler  <darin@apple.com>

        * khtml/khtmlview.h: Formatting tweak.

2003-08-21  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3386673>: a particular fidelity.com "Log in" link does nothing because of cross-domain JavaScript rules

        Reviewed by mjs.

        * config.h:
        * khtml/ecma/kjs_window.cpp:
        (Window::get): allow other frames to get the location object
        (Window::isSafeScript): added JS logging
        (Location::get): don't allow other frames to access location attributes
        (LocationFunc::tryCall): don't allow other frames to call functions on the location object

2003-08-21  Richard Williamson   <rjw@apple.com>
	
	Fixed 3378810.  Avoid resizing frame from drawRect: when printing.  This will corrupt the graphics context.

        Reviewed by Hyatt.

        * khtml/khtmlview.cpp:
        (KHTMLView::adjustViewSize):
        * khtml/khtmlview.h:
        * khtml/rendering/render_canvas.cpp:
        (RenderCanvas::layout):
        * kwq/KWQScrollView.mm:
        (QScrollView::resizeContents):
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge adjustViewSize]):

=== Safari-94 ===

2003-08-21  David Hyatt  <hyatt@apple.com>

	Fix for 3387302, floats weren't being allowed to be relatively positioned.  The
	fix is trivial.  Stop making floating/relpositiion setting an if/else and just make
	it two ifs.
	
        Reviewed by darin
