@@ -1,3 +1,12 @@
+2003-08-26  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3394107, make sure the display mutation code doesn't mutate objects with
+	display: none set.
+	
+        Reviewed by darin
+
+        * khtml/css/cssstyleselector.cpp:
+
 2003-08-22  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3388363, copying a word in a list item copied too much.  The code that checked
